jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
/* ... */
.margin-left-small-nf:not(:first-child) {
    margin-left: 3px;
}

.margin-left-big {
    margin-left: 5px;
}

.margin-right-big {
    margin-right: 5px;
}

.space-left-medium-nf:not(:first-of-type) {
    margin-left: 4px;
}

.space-left-big-nf:not(:first-of-type) {
    margin-left: 7px;
}

div.add-branch-button {
    border-style: dashed;
    border-color: #D8D7D7;
    -moz-border-radius: 10px;
    border-radius: 10px;
    background-color: #E7E6E6;
    padding: 7px;
    font-size: larger;
    color: gray;
    border-width: 2px;
}

div.add-branch-button:hover {
    background-color: #eeeeee;
    cursor: pointer;
}

.help-inline._error {
    color: #b94a48;
}
.word-wrap {
    font-family: Tahoma,Calibri,Verdana,Geneva,sans-serif;
}

.post-content-body {
    overflow: auto;
    line-height: 16px;
    font-size: 13px;
    text-align: left;
    vertical-align: top;
}

.post-content-body ul {
    margin: 0 0 0 18px !important;
}

.permission-type {
    padding: 7px 10px;
    width: 100px;
    font-weight: bold;
    margin-top: 5px;
}

.permission-allowed {
    color: #292;
}

.permission-restricted {
    color: #922;
}

.permissions-list {
    margin: 0px;
    padding: 0px;
}

.edit-permission {
    padding: 2px 10px;
    font-weight: bold;
    margin-top: 5px;
}

.permissions-list li {
    border: 2px solid #D8D7D7;
    background-color: rgb(235, 235, 235);
    list-style: none;
    margin-right: 20px;
    margin-top: 5px;
    padding: 5px 10px;
    -moz-border-radius: 10px;
    border-radius: 5px;
    display: inline-block;
}

.permissions-container {
    margin-left: 120px;
    margin-right: 120px;
    padding: 0px;
}

.permissions-branch-header {
    overflow: hidden;
    margin: 20px 0px;
}

.edit-permissions-button a {
    color: rgb(128, 128, 128);
    text-decoration: none;
}

#moderators-group-name {
    padding: 0px 15px;
}

.panel {
    margin-bottom: 15px;
    background-color: #ffffff;
    border: 1px solid transparent;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
}

.panel-body {
    padding: 5px;
}


.panel-body:after {
    clear: both;
}

.panel-heading {
    padding: 5px 15px;
    border-bottom: 1px solid transparent;
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}

.panel-title {
    margin-top: 0;
    margin-bottom: 0;
    font-size: 16px;
    color: inherit;
}

.panel-title > a {
    color: inherit;
}

.panel-primary {
    border-color: rgb(163, 163, 163);
}

.panel-primary > .panel-heading {
    color: #000000;
    font-weight: bold;
    background-color: rgb(200, 200, 200);
    border-color: rgb(163, 163, 163);
}

a.mentioned-user {
    color: inherit;
    font-weight: bold;
}

.two-list-selector-controls {
    width: 40px;
    display: inline-block;
    margin: 160px 0px 160px 8px;
}

.two-list-selector {
    height: 400px;
}

.list-container {
    width: 235px;
    height: 400px;
    margin: 0px;
    border: 2px solid rgb(128, 128, 128);
    border-radius: 5px;
}

.group-list-caption-container {
    height: 32px;
    padding-top: 5px;
    border-bottom: solid 2px rgb(128, 128, 128);
}

.group-list {
    height: 360px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.group-container {
    white-space: nowrap;
    width: 100%;
}

.group-list-caption-container, .group-list {
    width: 235px;
    margin: 0px;
}

.list-container input{
    margin: 5px;
}

.list-container input[type="checkbox"] + label {
    display:inline-block;
    margin:-1px 4px 0 0;
    vertical-align:middle;
}

.list-container label{
    width: 190px;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -webkit-text-overflow: ellipsis;
}

.group-caption {
    font-weight: bold;
    font-size: 120%;
}

pre.prettyprint {
    margin: 6px;
}

.two-list-selector-control {
    padding: 2px 0px;
}

@media (min-width: 800px) {
    .text_errorpage {
        margin-top: 20px;
        margin-bottom: 20px;
        font-size: 20px;
    }
}

.linear_transitions {
    transition:all .2s linear;
    -o-transition:all .2s linear;
    -moz-transition:all .2s linear;
    -webkit-transition:all .2s linear;
}

.image_errorpage {
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;
}

@media (max-width: 639px) {
    .image_errorpage {
        display: none;
    }
}

